examples/regressions/201_mutable_variables_copy.an
var x = 4
y = x
print y
x := 5
print y

// This used to print 4, 5

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/regressions/201_mutable_variables_copy.an:1:1
// 1 | var x = 4	// error: Expected a top-level item but found `var`
//   | ^^^
// 2 | y = x
// 
// examples/regressions/201_mutable_variables_copy.an:2:5
// 1 | var x = 4
// 2 | y = x	// error: `x` not found in scope
//   |     ^
// 3 | print y
// 
// examples/regressions/201_mutable_variables_copy.an:3:7
// 2 | y = x
// 3 | print y	// error: Expected `=` to begin the function body but found `y`
//   |       ^
// 4 | x := 5
// 
// examples/regressions/201_mutable_variables_copy.an:4:3
// 3 | print y
// 4 | x := 5	// error: Expected `=` to begin the function body but found `:=`
//   |   ^^
// 5 | print y
// 
// examples/regressions/201_mutable_variables_copy.an:5:7
// 4 | x := 5
// 5 | print y	// error: Expected `=` to begin the function body but found `y`
//   |       ^
// 
// Found 5 errors and 0 warnings

